adding borrow view endpoint and some fixes
