# swagger/swagger.yml
@@ -345,6 +345,38 @@ paths:
                     properties:
                       nextPage:
                         type: string
+    post:
+      summary: "Create borrow, when admin hands the book to a user (admin)"
+      tags:
+        - borrows
+      security:
+        - KeyAuth: [ ]
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                userEmail:
+                  type: string
+                bookInstanceId:
+                  type: string
+                dueDate:
+                  type: string
+                  format: date
+      responses:
+        200:
+          description: success response
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    enum: [ 'success' ]
+                  response:
+                    $ref: '#/components/schemas/borrow'
   /users/{userId}/borrows/:
     get:
       summary: "Get borrows of a user (admin)"
@@ -390,38 +422,6 @@ paths:
                     properties:
                       nextPage:
                         type: string
-    post:
-      summary: "Create borrow, when admin hands the book to a user (admin)"
-      tags:
-        - borrows
-      security:
-        - KeyAuth: [ ]
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                userEmail:
-                  type: string
-                bookInstanceId:
-                  type: string
-                dueDate:
-                  type: string
-                  format: date
-      responses:
-        200:
-          description: success response
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  status:
-                    type: string
-                    enum: [ 'success' ]
-                  response:
-                    $ref: '#/components/schemas/borrow'
   /borrows/submissions:
     post:
       summary: "Mark borrow as returned"
